# garden-manager

./: .env  .gitignore  README.md  api.py  cli-config copy 2.yml  cli-config copy.yml  cli-config.yaml  cli-config.yml  docker-compose.yml  generator.py  main.py  pyproject.toml
arguments/: __init__.py
argyaml/: README.md  pyproject.toml
argyaml/argyaml/: __main__.py  base.py  cli-config.yaml  cli-config.yml
argyaml/argyaml/handlers/: _generate.py
database/: init.sql  models.py  session.py
garden/: __init__.py  base.py  plant.py  tree.py  utils.py  weather.py
handlers/: __init__.py  _create.py  _delete.py  _example.py  _harvest.py  _list.py  _list_bed.py  _new_bed.py  _remove.py  _seed.py  _use.py  _water.py  connection.py  messages.py
ui/: index.html  index.js
